feat: add management multi-platform baseline
